--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: RexMcBride
+title: Tales of Murder
 ---
 
-<h1>RexMcBride</h1>
-<p>Congratulations! You just created the Playbook for RexMcBride.</p>
+<h1>Tales of Murder</h1>
+<h2>For readers with time to <em>kill</em>!</h2>
+<p><strong>Tales of Murder Press</strong> has a single over-arching goal &hellip; to preserve the classic murder mystery story, whether short stories, novellas or full-length novels&mdash;from exstinction. To that end, we publish these stories for your enjoyment on your phone, tablet, computer or e-reader device. For more, check out our full site &hellip; <em>now in development.</em></p>
